<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/dialog_new_game_game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:inputType="text"
        android:padding="4dp"
        android:hint="@string/unnamed_game"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/players_label"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/dialog_new_game_player_seekbar"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/dialog_new_game_player_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4"/>

    </LinearLayout>

</LinearLayout>